[package]

name = "router"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
license = "MIT"
version = "0.1.1"
description = "A router for the Iron framework."
repository = "https://github.com/iron/router"
documentation = "http://ironframework.io/doc/router/index.html"
keywords = ["iron", "web", "http", "routing", "router"]

[dependencies]
route-recognizer = { version = "0.1", git = "https://github.com/jadencarver/route-recognizer.rs.git" }
iron = ">=0.2, <0.4"
